--- a/src/main/resources/org/example/java_sem/chat.fxml
+++ b/src/main/resources/org/example/java_sem/chat.fxml
@@ -1,14 +1,22 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ScrollPane?>
+<?import javafx.scene.control.TextArea?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Text?>
+<?import javafx.scene.text.TextFlow?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="$CONTROLLER_NAME$"
-            prefHeight="400.0" prefWidth="600.0" >
-
+<AnchorPane prefHeight="400.0" prefWidth="628.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.java_sem.Chat">
+   <children>
+      <TextArea fx:id="addMes" layoutX="13.0" layoutY="309.0" prefHeight="60.0" prefWidth="494.0" />
+      <Button layoutX="522.0" layoutY="327.0" mnemonicParsing="false" onAction="#onSend" text="➤" />
+      <ScrollPane layoutX="7.0">
+         <content>
+            <TextFlow fx:id="chatM" prefHeight="292.0" prefWidth="499.0" />
+         </content>
+      </ScrollPane>
+      <Text layoutX="511.0" layoutY="43.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Онлайн:" />
+      <Text fx:id="onlneP" layoutX="563.0" layoutY="43.0" strokeType="OUTSIDE" strokeWidth="0.0" />
+   </children>
 </AnchorPane>
